<resources>
    <string name="app_name">NetBot</string>
    <string name="action_settings">Settings</string>
    <string name="btnConnect">Connect With Server Socket</string>
    <string name="About_Us">About Us</string>
    <string name="NetBotView">Click to video Streaming</string>
    <string name="txtIpConnect">IP Adress</string>
    <string name="btnDisconnect">Disconnect from Socket Server</string>
    <string name="btnRefresh">Refresh</string>
    <string name="btnAboutUs">About Us</string>
    <string name="btnClean">Roomba Clean Button</string>
    <string name="btnSpot">Roomba Spot Button</string>
    <string name="btnDock">Roomba Dock Button</string>
</resources>
