<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.iesdeltebre.oscarcastellmarcos.netbot.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#d7d8d8"
    android:visibility="visible"
    android:id="@+id/layoutMain">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="600dp"
        android:id="@+id/layoutButtons"
        android:background="#dddede"
        android:visibility="visible">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtIPConnect"
            android:layout_weight="1"
            android:digits="0123456789."
            android:enabled="true"
            android:maxLength="15"
            android:singleLine="true"
            android:textColor="#1c2553"
            android:textStyle="bold"
            android:background="#f2e9e9"
            android:clickable="true"
            android:gravity="fill_horizontal|bottom|left|fill_vertical"
            android:layout_marginTop="20dp"
            android:minHeight="50dp"
            android:text="@string/txtIpConnect"
            android:textSize="30sp"
            android:layout_marginLeft="25dp"
            android:editable="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:selectAllOnFocus="true" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnConnect"
            android:layout_weight="1"
            android:src="@drawable/connect"
            android:contentDescription="@string/btnConnect"
            android:layout_marginLeft="50dp"
            android:clickable="false" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDisconnect"
            android:layout_weight="1"
            android:src="@drawable/disconnect"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/btnDisconnect" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRefresh"
            android:layout_weight="1"
            android:src="@drawable/refresh"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/btnRefresh" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAboutUs"
            android:layout_weight="1"
            android:src="@drawable/about_us"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/btnAboutUs" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnClean"
            android:layout_weight="1"
            android:src="@drawable/clean"
            android:layout_marginLeft="100dp"
            android:adjustViewBounds="false"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/btnClean" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSpot"
            android:layout_weight="1"
            android:src="@drawable/spot"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/btnSpot" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDock"
            android:layout_weight="1"
            android:src="@drawable/dock"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/btnDock" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="705dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="100dp"
        android:showDividers="beginning|middle|end"
        android:background="#686f94"
        android:id="@+id/layoutControls"
        android:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnArrowUpLeft"
                android:layout_column="0"
                android:src="@drawable/arrow_upleft" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnArrowUp"
                android:layout_column="1"
                android:src="@drawable/arrow_up" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnArrowUpRigth"
                android:layout_column="2"
                android:src="@drawable/arrow_upright" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSpinLeft"
                android:layout_column="0"
                android:src="@drawable/arrowspinleft" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnStop"
                android:layout_column="1"
                android:src="@drawable/stop" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSpinRight"
                android:layout_column="2"
                android:src="@drawable/arrowspinright" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnArrowDownLeft"
                android:layout_column="0"
                android:src="@drawable/arrow_downleft" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnArrowDown"
                android:layout_column="1"
                android:baselineAlignBottom="false"
                android:clickable="false"
                android:contextClickable="false"
                android:src="@drawable/arrow_down" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnArrowDownRight"
                android:layout_column="2"
                android:src="@drawable/arrow_downright" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutAudioVideo"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:padding="5dp"
        android:layout_marginTop="575dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewVideo"
                android:src="@drawable/video_on"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:layout_margin="5dp" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewAudio"
                android:src="@drawable/audio"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:layout_margin="5dp" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewSpeak"
                android:src="@drawable/speak"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:layout_margin="5dp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="510dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="100dp"
        android:id="@+id/layoutVideo" >

        <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/NetBotView"
            android:contentDescription="@string/NetBotView"
            android:contextClickable="false"
            android:visibility="visible"
            android:clickable="false" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/layoutAboutUs"
        tools:context=".MainScreenActivity"
        android:clickable="false" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imgAboutUs"
            android:src="@drawable/about_us_info"
            android:visibility="visible"
            android:contentDescription="@string/About_Us"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="56dp"
            android:clickable="false" />

    </RelativeLayout>

</RelativeLayout>


